# verse

./: guide.md  improvement.md  run-app  verse-prd.md
backend/: .gitignore  pyproject.toml
backend/tests/: test_audio.py  test_audio_hooks.py  test_browser.py  test_browser_agent.py  test_classification_tool_selector.py  test_config.py  test_debug_logger.py  test_engines.py  test_hotkey.py  test_keychain.py  test_latency.py  test_llm_deepseek.py  test_llm_gemini.py  test_local_intent.py  test_media_monitor.py  test_orchestrator.py  test_orchestrator_blur.py  test_orchestrator_memory.py  test_orchestrator_vad.py  test_persistence_db.py  test_pipeline_events.py  test_scaffold.py  test_speak_streaming.py  test_spotify_tools.py  test_state.py  test_streaming_realtime.py  test_stt_groq.py  test_tools.py  test_tools_native.py  test_tools_osa.py  test_tools_shortcuts.py  test_tts_edge.py  test_tts_gemini.py  test_tts_google.py  test_tts_macos_say.py  test_vad.py  test_vad_state.py  test_wake_word.py  test_ws_protocol.py  test_ws_server.py
backend/verse/: __init__.py  cli.py  config.py  hotkey.py  latency.py  main.py  orchestrator.py  state.py  wake_word.py
backend/verse/audio/: __init__.py  capture.py  playback.py  streaming_player.py  vad.py
backend/verse/engines/: __init__.py  base.py  classic.py  gemini_live.py  live.py
backend/verse/intent/: __init__.py  classifier.py  local.py  turn.py
backend/verse/llm/: __init__.py  base.py  deepseek.py  gemini.py
backend/verse/persistence/: db.py  debug_logger.py  keychain.py
backend/verse/stt/: __init__.py  base.py  (+1 more)
(+73 files in other folders)
