[project]
name = "verse"
version = "0.1.0"
description = "Verse - voice-first AI companion for macOS"
authors = [
    {name = "Rayne"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "keyring>=24.0.0",
    "groq>=0.5.0",
    "openai>=1.12.0",
    "elevenlabs>=0.3.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
